--- a/index.html
+++ b/index.html
@@ -34,6 +34,67 @@
               </div>
             </div>
           </nav>
+          <!-- image slider -->
+          <section class="container">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active p-5">
+                  <div class="row bg-info bg-gradient d-flex align-items-center p-5">
+                    <div class="col-lg-7">
+                      <h1>Cool Dude Headphone</h1>
+                      <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                      <h1>$420</h1>
+                      <button class="btn btn-warning">Buy Now</button>
+                    </div>
+                    <div class="col-lg-5">
+                      <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                    </div>
+                  </div>
+                  
+                </div>
+                <div class="carousel-item">
+                  <div class="row bg-info bg-gradient d-flex align-items-center p-5">
+                    <div class="col-lg-7">
+                      <h1>Cool Dude Headphone</h1>
+                      <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                      <h1>$420</h1>
+                      <button class="btn btn-warning">Buy Now</button>
+                    </div>
+                    <div class="col-lg-5">
+                      <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="row bg-info bg-gradient d-flex align-items-center p-5">
+                    <div class="col-lg-7">
+                      <h1>Cool Dude Headphone</h1>
+                      <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                      <h1>$420</h1>
+                      <button class="btn btn-warning">Buy Now</button>
+                    </div>
+                    <div class="col-lg-5">
+                      <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </section>
+
     </header>
     <!-- main section -->
     <main>
