--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
               </div>
               <div class="carousel-inner">
-                <div class="carousel-item active p-5">
                   <div class="row bg-info bg-gradient d-flex align-items-center p-5">
                     <div class="col-lg-7">
                       <h1>Cool Dude Headphone</h1>
@@ -55,8 +54,6 @@
                       <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
                     </div>
                   </div>
-                  
-                </div>
                 <div class="carousel-item">
                   <div class="row bg-info bg-gradient d-flex align-items-center p-5">
                     <div class="col-lg-7">
@@ -78,7 +75,7 @@
                       <h1>$420</h1>
                       <button class="btn btn-warning">Buy Now</button>
                     </div>
-                    <div class="col-lg-5">
+                    <div class="col-lg-5 img-fluid">
                       <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
                     </div>
                   </div>
@@ -94,11 +91,34 @@
               </button>
             </div>
           </section>
-
     </header>
     <!-- main section -->
     <main>
-
+      <!------------------
+        ------catagories -->
+      
+      <section class="container my-5">
+          <div class="row g-4">
+            <div class="col-lg-4 col-md-6 col-12">
+                  <div class="p-3 border bg-warning d-flex justify-content-between align-items-center rounded-3">
+                    <h1 class="text-white">Watch</h1>
+                    <img src="images/categories/watch.png" alt="">
+                  </div>                 
+            </div>
+            <div class="col-lg-4 col-md-6 col-12">
+               <div class="p-3 border bg-success    d-flex justify-content-between align-items-center rounded-3">
+                <h1 class="text-white">Bags</h1>
+                <img src="images/categories/bag.png" alt="">
+           </div>                 
+        </div>
+        <div class="col-lg-4 col-md-6 col-12">
+          <div class="p-3 border bg-primary        d-flex justify-content-between align-items-center rounded-3">
+            <h1 class="text-white">Shoes</h1>
+            <img src="images/categories/shoes.png" alt="">
+          </div>                 
+      </div>
+          </div>
+      </section>
     </main>
     <footer>
 
