--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <!-- bootstrap link -->
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- header section -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
               <a class="navbar-brand" href="#"><img src="images/logo.png" ></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,19 +24,21 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
-                  
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#backpack">Backpack</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#subscribe">Subscribe</a>
                   </li>
                 </ul>
               </div>
             </div>
           </nav>
           <!-- image slider -->
-          <section class="container">
+          <section class="container ">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -43,7 +46,7 @@
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
               </div>
               <div class="carousel-inner">
-                  <div class="row bg-info bg-gradient d-flex align-items-center p-5">
+                  <div class="row header-bacground-color bg-gradient d-flex align-items-center p-5">
                     <div class="col-lg-7">
                       <h1>Cool Dude Headphone</h1>
                       <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
@@ -55,7 +58,7 @@
                     </div>
                   </div>
                 <div class="carousel-item">
-                  <div class="row bg-info bg-gradient d-flex align-items-center p-5">
+                  <div class="row header-bacground-color bg-gradient d-flex align-items-center p-5">
                     <div class="col-lg-7">
                       <h1>Cool Dude Headphone</h1>
                       <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
@@ -68,7 +71,7 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <div class="row bg-info bg-gradient d-flex align-items-center p-5">
+                  <div class="row header-bacground-color bg-gradient d-flex align-items-center p-5">
                     <div class="col-lg-7">
                       <h1>Cool Dude Headphone</h1>
                       <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
@@ -97,31 +100,128 @@
       <!------------------
         ------catagories -->
       
-      <section class="container my-5">
+      <section class="container my-5" id="shoes">
           <div class="row g-4">
             <div class="col-lg-4 col-md-6 col-12">
                   <div class="p-3 border bg-warning d-flex justify-content-between align-items-center rounded-3">
                     <h1 class="text-white">Watch</h1>
-                    <img src="images/categories/watch.png" alt="">
+                    <img class="catergorie-img" src="images/categories/watch.png" alt="">
                   </div>                 
             </div>
             <div class="col-lg-4 col-md-6 col-12">
                <div class="p-3 border bg-success    d-flex justify-content-between align-items-center rounded-3">
                 <h1 class="text-white">Bags</h1>
-                <img src="images/categories/bag.png" alt="">
+                <img class="catergorie-img" src="images/categories/bag.png" alt="">
            </div>                 
         </div>
         <div class="col-lg-4 col-md-6 col-12">
           <div class="p-3 border bg-primary        d-flex justify-content-between align-items-center rounded-3">
             <h1 class="text-white">Shoes</h1>
-            <img src="images/categories/shoes.png" alt="">
+            <img class="catergorie-img" src="images/categories/shoes.png" alt="">
           </div>                 
       </div>
           </div>
       </section>
-    </main>
-    <footer>
+      <!-- shoes section -->
+      <section class="container">
+        <h1>Shoes</h1>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+          <div class="col">
+            <div class="card border-0 shadow-lg h-100">
+              <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Supply 350</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="m-3">
+                <button class="btn btn-warning">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 shadow-lg h-100">
+              <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Nike 360</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              </div>
+              <div class="m-3">
+                <button class="btn btn-warning">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 shadow-lg h-100">
+              <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Red Airmax</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+              <div class="m-3">
+                <button class="btn btn-warning">Buy Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- backpack section -->
 
+      <section class="container my-5" id="backpack">
+        <h1>Backpack</h1>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+          <div class="col">
+            <div class="card border-0 shadow-lg h-100">
+              <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Supply 350</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="m-3">
+                <button class="btn btn-warning">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 shadow-lg h-100">
+              <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Nike 360</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              </div>
+              <div class="m-3">
+                <button class="btn btn-warning">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 shadow-lg h-100">
+              <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Red Airmax</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+              <div class="m-3">
+                <button class="btn btn-warning">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!---------
+      subscribe
+      -- -------- -->
+      <section style="height:300px;" class="container d-flex justify-content-center align-items-center rounded-3 header-bacground-color">
+        <div id="subscribe">
+          <h1>LET'S STAY IN TOUCH</h1>
+          <p>Get updates on sales,specials and more</p>
+          <input  type="text" placeholder="Your Name" name="" id="">
+          <br>
+          <button class="btn btn-warning">SUBMIT</button>
+        </div>
+      </section>
+    </main>
+    <footer class="mt-5 text-center">
+      <p>&copy;2022 Panda Commarce,all rights reserved Shamim Bhuiyan.</p>
     </footer>
 
     <!-- bootstrap script link -->
