--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@
       <!---------
       subscribe
       -- -------- -->
-      <section style="height:300px;" class="container d-flex justify-content-center align-items-center rounded-3 header-bacground-color">
+      <section style="height:300px;" class="container d-flex justify-content-center align-items-center rounded-3 header-bacground-color text-center">
         <div id="subscribe">
           <h1>LET'S STAY IN TOUCH</h1>
           <p>Get updates on sales,specials and more</p>
-          <input  type="text" placeholder="Your Name" name="" id="">
+          <input class="form-control" type="text" placeholder="Your Email" name="" id="">
           <br>
           <button class="btn btn-warning">SUBMIT</button>
         </div>
